# sparsecopy

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  config.vim  main.cpp
